--- a/css/style.css
+++ b/css/style.css
@@ -694,6 +694,9 @@ svg {
   footer {
     display: none;
   }
+  .portada h1 {
+    font-size: 3.8rem;
+  }
   .nav-mobile {
     display: flex;
     flex-direction: column;
@@ -708,7 +711,7 @@ svg {
   .nav-mobile .menu li a{
     text-decoration: none;
     color: #fff;
-    font-size: 2rem;
+    font-size: 1rem;
     margin-top: 1rem;
     display: block;
   }
@@ -726,9 +729,9 @@ svg {
     background: var(--main-blue-color);
     display: flex;
     flex-direction: column;
-    padding: 5rem 3rem;
+    padding: 1rem;
     width: 100%;
-    row-gap: 3rem;
+    row-gap: 2rem;
   }
 
   .lineas{
@@ -761,10 +764,12 @@ svg {
   }
   .portada, .intro {
     padding: 2rem;
-    height: 100vh;
     display: flex;
     justify-content: center;
   }
+  .VSlide h2 {
+    font-size: 2.4rem;
+}
   h2 {
     font-size:3rem;
   }
@@ -794,6 +799,12 @@ svg {
     flex-direction: column;
     align-items: center;
    }
+   .logosContainer {
+    flex-direction: column;
+   }
+   .logosContainer li {
+    width: 100%;
+  }
   .spacer {
     display: none;
   }
@@ -811,7 +822,7 @@ svg {
   }
   .footer-mobile .menu, .footer-mobile .menu a{
     color: #fff;
-    font-size: 1rem;
+    font-size: 0.8rem;
     text-decoration: none;
   }
 
@@ -819,7 +830,11 @@ svg {
     display: flex;
     flex-direction: column;
     margin-left: 0;
-    row-gap: 1rem;
+    row-gap: 0.2rem;
+  }
+  .mobile-menu .linksDescargaContainer .linkDescarga  { 
+    padding: 0;
+    font-size: 0.8rem;
   }
   .cardText .logos-wrapper{
     flex-direction: column;
